--- a/navbar-practice.html
+++ b/navbar-practice.html
@@ -56,7 +56,17 @@
 
     <header class="w-[90%] mx-auto">
         <nav class="my-12 ">
-
+<!-- HTML -->
+<div class="relative">
+    <button class="px-4 py-2 bg-gray-800 text-white rounded-lg">Menu</button>
+    <div class="dropdown-right w-48 mt-2 bg-white border rounded-lg shadow-lg hidden">
+      <!-- Dropdown content here -->
+      <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Option 1</a>
+      <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Option 2</a>
+      <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-200">Option 3</a>
+    </div>
+  </div>
+  
            
 
         </nav>
